mostly functional now

--- a/index.html
+++ b/index.html
@@ -9,20 +9,24 @@
 
 <body>
   <h1>Hangman</h1>
-	<h2>help save the guy from the gallows by figuring out the word</h2>
+	<h2>Help save the guy from the gallows by figuring out the word!</h2>
 	<div>
 		<img src="assets/images/gallows.gif">
 	</div>
-	<p>Wins</p>
+	<div>
+	  <button type="button" id="next">Next</button>
+	  <button type="button" id="reset">Reset</button>
+	</div>
+	<h3>Wins</h3>
 	  <p><span id="win"></span></p>
 	  	  <br>
-	<p>Current Word</p>
+	<h3>Current Word</h3>
 	  <p><span id="currentWord"></span></p>
 	  	  <br>
-	<p>Number of guesses remaining</p>
+	<h3>Number of guesses remaining</h3>
 	  <p><span id="guessesLeft"></span></p>
 	  	  <br>
-	<p>Letters already guessed</p>
+	<h3>Letters already guessed</h3>
 	  <p><span id="userGuess"></span></p>
 	  	  <br>
 
