tidied up code formatting

--- a/index.html
+++ b/index.html
@@ -1,44 +1,42 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-	<title>Magical Creatures Hangman Game</title>
-	<meta charset="UTF-8">
-	<link href="https://fonts.googleapis.com/css?family=Homemade+Apple|Reenie+Beanie|Princess+Sofia" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <title>Magical Creatures Hangman Game</title>
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Reenie+Beanie|Princess+Sofia" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
 <body>
-  <h1>Magical Creatures Hangman</h1>
+<h1>Magical Creatures Hangman</h1>
+  <p class="center">Help save the guy from the gallows by guessing the correct magical creature.</p>
+  <p class="center">(Refer to Fantastic Beasts and Where to Find Them by Newt Scamander if you need help!)</p>
 
-	<p class="center">Help save the guy from the gallows by guessing the correct magical creature</p>
-	<p class="center">(Refer to Fantastic Beasts and Where to Find Them by Newt Scamander if you need help!)</p>
-
-  <div class="left">
-		<img src="assets/images/gallows.gif">
-	<div class="center">
-	  <button type="button" id="reset">Reset</button>
-	  <button type="button" id="next">Next</button>
-	</div>
+<div class="left">
+  <img src="assets/images/gallows.gif">
+  <div class="center">
+    <button type="button" id="reset">Reset</button>
+    <button type="button" id="next">Next</button>
   </div>
+</div>
 
-  <div class="right">
-	<h3>Wins</h3>
-	  <p><span id="win"></span></p>
-	  	  <br>
-	<h3>Current Word</h3>
-	  <p><span id="currentWord"></span></p>
-	  	  <br>
-	<h3>Number of guesses remaining</h3>
-	  <p><span id="guessesLeft"></span></p>
-	  	  <br>
-	<h3>Letters already guessed</h3>
-	  <p><span id="userGuess"></span></p>
-	  	  <br>
-  </div>
+<div class="right">
+  <h3>Wins</h3>
+    <p><span id="win"></span></p>
+    <br>
+  <h3>Current Word</h3>
+    <p><span id="currentWord"></span></p>
+    <br>
+  <h3>Number of guesses remaining</h3>
+    <p><span id="guessesLeft"></span></p>
+    <br>
+  <h3>Letters already guessed</h3>
+    <p><span id="userGuess"></span></p>
+    <br>
+</div>
 
 <script src="assets/javascript/game.js"></script>
 
 </body>
-
 </html>
