made a winner event and adjusted some of the page layout

--- a/index.html
+++ b/index.html
@@ -10,30 +10,38 @@
 
 <body>
 <h1>Magical Creatures Hangman</h1>
-  <p class="center">Help save the guy from the gallows by guessing the correct magical creature.</p>
-  <p class="center">(Refer to Fantastic Beasts and Where to Find Them by Newt Scamander if you need help!)</p>
+  <p class="center">Guess the magical creature!</p>
+  <p class="center smaller">(Refer to "Fantastic Beasts and Where to Find Them" by Newt Scamander if you need help!)</p>
 
 <div class="left">
   <img src="assets/images/gallows.gif">
-  <div class="center">
+  <div class="left child">
     <button type="button" id="reset">Reset</button>
     <button type="button" id="next">Next</button>
   </div>
 </div>
 
-<div class="right">
+<div class="left height">
+    <h3>Current Word</h3>
+    <p><span id="currentWord"></span></p>
+    <br>
+</div>
+
+<div class="left">
   <h3>Wins</h3>
     <p><span id="win"></span></p>
     <br>
-  <h3>Current Word</h3>
-    <p><span id="currentWord"></span></p>
-    <br>
+
   <h3>Number of guesses remaining</h3>
     <p><span id="guessesLeft"></span></p>
     <br>
   <h3>Letters already guessed</h3>
     <p><span id="userGuess"></span></p>
     <br>
+</div>
+
+<div>
+  <img id="winner" class ="hidden" src="assets/images/firework2.gif">
 </div>
 
 <script src="assets/javascript/game.js"></script>
