made timer for winner screen and added sparkle codepen to h1, plus changed background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Magical Creatures Hangman</h1>
+<h1 class="sparkley">Magical Creatures Hangman</h1>
   <p class="center">Guess the magical creature!</p>
   <p class="center smaller">(Refer to "Fantastic Beasts and Where to Find Them" by Newt Scamander if you need help!)</p>
 
@@ -44,6 +44,10 @@
   <img id="winner" class ="hidden" src="assets/images/firework2.gif">
 </div>
 
+<script
+  src="https://code.jquery.com/jquery-3.2.1.js"
+  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+  crossorigin="anonymous"></script>
 <script src="assets/javascript/game.js"></script>
 
 </body>
