replaced gallows image, got word to display after loss and show up for a couple of seconds after firework goes away after win

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <p class="center smaller">(Refer to "Fantastic Beasts and Where to Find Them" by Newt Scamander if you need help!)</p>
 
 <div class="left">
-  <img src="assets/images/gallows.gif">
+ <div class="child">
+  <img src="assets/images/unicorn.png">
+ </div>
   <div class="left child">
     <button type="button" id="reset">Reset</button>
     <button type="button" id="next">Next</button>
