cleaned up code, final changes to page layout

--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
  <div class="child">
   <img src="assets/images/unicorn.png">
  </div>
-  <div class="left child">
-    <button type="button" id="reset">Reset</button>
-    <button type="button" id="next">Next</button>
-  </div>
 </div>
 
 <div class="left height">
+  <div class="word">
     <h3>Current Word</h3>
     <p><span id="currentWord"></span></p>
     <br>
+  </div>
+  <div class="word">
+    <button type="button" id="reset">Reset</button>
+    <button type="button" id="next">Next</button>
+  </div>
 </div>
 
 <div class="left">
